--- a/README.Rmd
+++ b/README.Rmd
@@ -13,9 +13,9 @@ knitr::opts_chunk$set(
 ```
 #E4tools
 
-EMAtools is an early-release set of tools that you can use to automate your workflow for analyzing EDA data that comes from the Empatica E4. You can run these functions consecutively. 
+E4tools is an early-release set of tools that you can use to automate your workflow for analyzing EDA data that comes from the Empatica E4. You can run these functions consecutively. 
 
-##What can you do now with EMAtools?
+##What can you do now with E4tools?
 There are currently four tools, all of which are part of the EDA workflow (acc. workflow coming soon):
 
 **E4_EDA_Process.part1.ExtractRawEDA**, which allows you extract and filter EDA data. It will output raw data, filtered data (using user-specified high and low pass filters + a butterworth filter), and filtered + feature-scaled ([0,1]) data. It will also provide summary data at the participant and session level.
