Now includes sample data

--- a/vignettes/my-vignette.Rmd
+++ b/vignettes/my-vignette.Rmd
@@ -34,14 +34,33 @@ Inputs: (1) List of participant numbers and (2) location where ZIP folders are s
 Outputs: (1) one RDS file per participant with all data, (2) summary file that gives participant-level meta-data.
 
 #### Code
-```{r eval=FALSE} 
+```{r eval=FALSE, echo=TRUE} 
 E4_EDA_Process.part1.ExtractRawEDA(participant_list=c(1001:1003),
-                                   ziplocation="~/Documents/E4tools_demo_data/data/",
-                                   rdslocation.EDA="~/Documents/E4tools_demo_data/output/raw_EDA/",
-                                   summarylocation="~/Documents/E4tools_demo_data/output/summaries/",
+                                   ziplocation="~/extdata/E4_demo_data/",
+                                   rdslocation.EDA="~/extdata/output/raw_EDA/",
+                                   summarylocation="~/extdata/output/summaries/",
                                    EDA_low_cut=0.001,LowPctCutoff=.75,
                                    EDA_high_cut=25,HighPctCutoff=.75)
 
+```
+
+#### Console output
+```{r eval=TRUE, echo=FALSE} 
+E4_EDA_Process.part1.ExtractRawEDA(participant_list=c(1001:1003),
+                                   ziplocation=paste(system.file(package="E4tools"),"/extdata/E4_demo_data/",sep=""),
+                                   rdslocation.EDA=paste(system.file(package="E4tools"),"/extdata/output/raw_EDA/",sep=""),
+                                   summarylocation=paste(system.file(package="E4tools"),"/extdata/output/summaries/",sep=""),
+                                   EDA_low_cut=0.001,LowPctCutoff=.75,
+                                   EDA_high_cut=25,HighPctCutoff=.75)
+
+```
+
+#### Sample of RDS output file
+```{r, echo=FALSE,eval=TRUE}
+options(scipen=999)
+Table0<-readRDS(paste(system.file(package="E4tools"),"/extdata/EDA_presses_COMBINED.RDS",sep=""))
+Table0a<-head(Table0)
+knitr::kable(Table0a, format = "html")
 ```
 
 
@@ -54,18 +73,31 @@ Output (one file per study): RDS file with list of IDs and button press times.
 
 #### Code
 
-```{r eval=FALSE}
+```{r eval=FALSE, echo=TRUE}
 E4_EDA_Process.part2.ExtractButtonPresses(participant_list=c(1001:1003),
-                                          ziplocation="~/Documents/E4tools_demo_data/data/",
-                                          rdslocation.buttonpress="~/Documents/E4tools_demo_data/output/tags/",
-                                          part1summaries="~/Documents/E4tools_demo_data/output/summaries/",
+                                          ziplocation="/extdata/E4_demo_data/",
+                                          rdslocation.buttonpress="/extdata/output/presses/",
+                                          summarylocation="/extdata/output/summaries/",
                                           cutoff.ends=2,
                                           cutoff.overlap=20)
 ```
 
+#### Console output
+```{r eval=TRUE, echo=FALSE}
+E4_EDA_Process.part2.ExtractButtonPresses(participant_list=c(1001:1003),
+                                          ziplocation=paste(system.file(package="E4tools"),"/extdata/E4_demo_data/",sep=""),
+                                          rdslocation.buttonpress=paste(system.file(package="E4tools"),"/extdata/output/presses/",sep=""),
+                                          summarylocation=paste(system.file(package="E4tools"),"/extdata/output/summaries/",sep=""),
+                                          cutoff.ends=2,
+                                          cutoff.overlap=20)
+```
 
-
-
+#### Sample of RDS output file
+```{r, echo=FALSE,eval=TRUE}
+Table1<-readRDS(paste(system.file(package="E4tools"),"/extdata/1002_EDA.rds",sep=""))
+Table1a<-head(Table1)
+knitr::kable(Table1a, format = "html")
+```
 
 
 ## Step 3: Match button presses to EDA
@@ -74,22 +106,50 @@ Inputs: (1) List of participant numbers, (2) location of individual EDA files fr
 Outputs: (1) RDS file with EDA data before and/or after button presses (and control data), for each participant and combined.
 
 #### Code
-
-```{r, eval=FALSE}
+```{r, eval=FALSE, echo=TRUE}
 E4_EDA_Process.part3.MatchPressesToEDA(participant_list=c(1001:1003),
-                                       rdslocation.buttonpress="~/Documents/E4tools_demo_data/output/tags/",
-                                       rdslocation.MatchedEDA="~/Documents/E4tools_demo_data/output/matched_EDA/",
-                                       rdslocation.EDA="~/Documents/E4tools_demo_data/output/raw_EDA/",
+                                       rdslocation.buttonpress="~/extdata/output/presses/",
+                                        rdslocation.MatchedEDA="~/extdata/output/matched_EDA/",
+                                      rdslocation.EDA="~/extdata/output/raw_EDA/",
+                                       min.before=20,min.after=20,control=T)
+```
+#### Console output
+```{r, eval=TRUE, echo=FALSE}
+E4_EDA_Process.part3.MatchPressesToEDA(participant_list=c(1001:1003),
+                                       rdslocation.buttonpress=paste(system.file(package="E4tools"),"/extdata/output/presses/",sep=""),
+                                        rdslocation.MatchedEDA=paste(system.file(package="E4tools"),"/extdata/output/matched_EDA/",sep=""),
+                                      rdslocation.EDA=paste(system.file(package="E4tools"),"/extdata/output/raw_EDA/",sep=""),
                                        min.before=20,min.after=20,control=T)
 ```
 
 
+#### Sample of RDS output file
+```{r, echo=FALSE,eval=TRUE}
+Table2<-readRDS(paste(system.file(package="E4tools"),"/extdata/EDA_presses_COMBINED.RDS",sep=""))
+Table2a<-head(Table2)
+knitr::kable(Table2a, format = "html")
+```
+
 
 ## Step 4: Put matched EDA in to bins
-This is the final step where everything gets put
-```{r,eval=FALSE}
+This is the final step where everything gets put into one file. 
+```{r,eval=FALSE, echo=TRUE}
 E4_EDA_Process.part4.BinMatchedEDA(participant_list=c(1001:1003),
-                                   rdslocation.MatchedEDA="~/Documents/E4tools_demo_data/output/matched_EDA/",
-                                   min.after = 20,min.before = 20,
-                                   rdslocation.BinnedMatchedEDA="~/Documents/E4tools_demo_data/output/")
+                                    rdslocation.MatchedEDA="/extdata/output/matched_EDA/",
+                                    rdslocation.BinnedMatchedEDA="/extdata/output/binned_matched_EDA/",
+                                   min.after = 20,min.before = 20)
+```
+#### Console output
+```{r,eval=TRUE, echo=FALSE}
+E4_EDA_Process.part4.BinMatchedEDA(participant_list=c(1001:1003),
+                                    rdslocation.MatchedEDA=paste(system.file(package="E4tools"),"/extdata/output/matched_EDA/",sep=""),
+                                    rdslocation.BinnedMatchedEDA=paste(system.file(package="E4tools"),"/extdata/output/binned_matched_EDA/",sep=""),
+                                   min.after = 20,min.before = 20)
+```
+#### Sample of RDS output file
+Note: The values for "MinBeforeAfter" for "before" values will be negative, to facilate things like growth curve modeling. If you positive integers, just multiple this column by -1.
+```{r, echo=FALSE,eval=TRUE}
+Table3<-readRDS(paste(system.file(package="E4tools"),"/extdata/EDA_merged_binned.RDS",sep=""))
+Table3a<-head(Table3)
+knitr::kable(Table3a, format = "html")
 ```
